# PistaCarrerasRA

./: .gitignore  CMakeLists.txt  README.md  build.bat
include/: game_controller.h  marker_detection.h  model_renderer.h  quad_renderer.h
include/vision/: gesture_recognition.h
models/: perfumes.mtl
models/carro2/: Carro.mtl
src/: calibracion.yml  game_controller.cpp  gesture_demo.cpp  main.cpp  marker_detection  marker_detection.cpp  marker_detection.h  model_renderer.cpp  prueba_marker  prueba_marker.cpp  quad_renderer.cpp  test_glad.cpp
src/vision/: gesture_recognition.cpp
